--- a/pricing.html
+++ b/pricing.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Pricing — System & Flow</title>
   <meta name="description" content="Simple, transparent pricing for System & Flow’s SaaS apps and AI prompts." />
@@ -10,101 +10,229 @@
   <meta name="robots" content="index,follow" />
   <meta name="theme-color" content="#0b1220" />
 
-  <!-- Open Graph -->
+  <!-- Open Graph / Twitter -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Pricing — System & Flow" />
   <meta property="og:description" content="Simple, transparent pricing for System & Flow’s SaaS apps and AI prompts." />
   <meta property="og:url" content="https://systemnflow.com/pricing.html" />
   <meta property="og:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
-
-  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Pricing — System & Flow" />
   <meta name="twitter:description" content="Simple, transparent pricing for System & Flow’s SaaS apps and AI prompts." />
   <meta name="twitter:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
 
-  <!-- Icons & Manifest -->
+  <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png" />
   <link rel="manifest" href="/assets/img/site.webmanifest" />
-  <link rel="icon" href="/assets/img/favicon.ico" />
+  <link rel="shortcut icon" href="/assets/img/favicon.ico" />
 
-  <!-- Styles -->
-  <link rel="preload" href="/styles.css" as="style" />
-  <link rel="stylesheet" href="/styles.css" />
+  <!-- CSS -->
+  <link rel="preload" href="/assets/css/main.css" as="style" />
+  <link rel="stylesheet" href="/assets/css/main.css" />
 
-  <!-- Google Analytics -->
+  <!-- GA -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWG4X18"></script>
-  <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);} gtag('js',new Date()); gtag('config','G-1FRFWG4X18');</script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-1FRFWG4X18');
+  </script>
+
+  <style>
+    /* Page-specific light touches */
+    .pricing-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:18px}
+    @media (max-width:900px){.pricing-grid{grid-template-columns:1fr 1fr}}
+    @media (max-width:560px){.pricing-grid{grid-template-columns:1fr}}
+    .card-top{display:flex;align-items:center;justify-content:space-between;margin-bottom:6px}
+    .badge{display:inline-flex;align-items:center;gap:6px;font-size:.8rem;border:1px solid var(--border);padding:4px 8px;border-radius:999px}
+    .badge .dot{width:8px;height:8px;border-radius:50%}
+    .badge.soon{background:rgba(184,115,51,.12)} /* copper tint */
+    .badge.soon .dot{background:#b87333}
+    .card-actions{display:flex;gap:10px;margin-top:10px;flex-wrap:wrap}
+
+    /* FAQ */
+    .faq{max-width:820px;margin:0 auto}
+    .faq details{background:var(--card);border:1px solid var(--border);border-radius:14px;margin:10px 0;padding:12px}
+    .faq summary{cursor:pointer;font-weight:600;outline:none}
+    .faq summary::-webkit-details-marker{display:none}
+    .faq .a{color:var(--muted);margin-top:8px}
+  </style>
 </head>
-<body class="dark">
-  <header class="wrap header">
-    <div class="brand">
-      <a href="/" style="display:flex;align-items:center;gap:10px;text-decoration:none">
-        <img src="/assets/img/logo.png" alt="System & Flow icon" class="logo-icon" />
-        <span class="brand-name">System &amp; Flow</span>
-      </a>
+
+<body>
+  <a class="skip-link" href="#main">Skip to content</a>
+
+  <header class="site-header">
+    <div class="container">
+      <a class="brand" href="/"><img src="/assets/img/logo.png" alt="System & Flow logo" /></a>
+      <nav aria-label="Primary">
+        <button class="nav-toggle" aria-expanded="false" aria-controls="nav">Menu</button>
+        <ul id="nav" class="nav">
+          <li><a href="/">Home</a></li>
+          <li><a href="/apps.html">Apps</a></li>
+          <li><a href="/pricing.html" aria-current="page">Pricing</a></li>
+          <li><a href="/contact.html" class="button">Contact</a></li>
+        </ul>
+      </nav>
     </div>
-    <nav class="nav">
-      <a href="/">Home</a>
-      <a href="/apps.html">Apps</a>
-      <a href="/pricing.html" aria-current="page">Pricing</a>
-      <a href="/contact.html">Contact</a>
-    </nav>
   </header>
 
-  <main class="wrap hero">
-    <h1>Simple pricing.</h1>
-    <p class="sub">Start free. Upgrade when you’re ready. Cancel any time.</p>
+  <main id="main">
+    <!-- Hero -->
+    <section class="hero">
+      <div class="container">
+        <h1>Simple pricing.</h1>
+        <p class="small" style="max-width:720px">Start free. Upgrade when you’re ready. Cancel any time.</p>
+      </div>
+    </section>
+
+    <!-- Plans -->
+    <section class="section">
+      <div class="container pricing-grid">
+        <article class="card">
+          <h3>Free</h3>
+          <p class="small">Transcript Analyzer + newsletter.</p>
+          <ul class="small" style="line-height:1.8">
+            <li>Actions, Risks, Decisions</li>
+            <li>Email support (community)</li>
+          </ul>
+          <div class="card-actions">
+            <a class="button primary" href="/contact.html">Get Started</a>
+          </div>
+        </article>
+
+        <article class="card">
+          <div class="card-top">
+            <h3 style="margin:0">Pro</h3>
+            <span class="badge soon" aria-label="Coming soon"><span class="dot" aria-hidden="true"></span>Coming&nbsp;Soon</span>
+          </div>
+          <p class="small">Status Report Generator + AI Prompt Pack.</p>
+          <ul class="small" style="line-height:1.8">
+            <li>Exec-ready one-pagers</li>
+            <li>Export to PDF/Markdown</li>
+            <li>50+ AI prompts for PMs</li>
+          </ul>
+          <div class="card-actions">
+            <a class="button ghost" href="/contact.html">Get Notified</a>
+          </div>
+        </article>
+
+        <article class="card">
+          <div class="card-top">
+            <h3 style="margin:0">Suite</h3>
+            <span class="badge soon" aria-label="Coming soon"><span class="dot" aria-hidden="true"></span>Coming&nbsp;Soon</span>
+          </div>
+          <p class="small">Everything in Pro + Risk Radar.</p>
+          <ul class="small" style="line-height:1.8">
+            <li>AI-suggested mitigations</li>
+            <li>Priority support</li>
+          </ul>
+          <div class="card-actions">
+            <a class="button ghost" href="/contact.html">Get Notified</a>
+          </div>
+        </article>
+      </div>
+    </section>
+
+    <!-- FAQ -->
+    <section class="section">
+      <div class="container faq">
+        <h2>Pricing FAQ</h2>
+
+        <details>
+          <summary>How does billing work?</summary>
+          <div class="a small">
+            Pro and Suite will be monthly subscriptions billed at the start of each cycle. You can switch plans or cancel anytime
+            from your account; changes take effect at the next renewal.
+          </div>
+        </details>
+
+        <details>
+          <summary>Do you offer refunds?</summary>
+          <div class="a small">
+            Yes — if something truly isn’t working for you, contact us within 14 days of purchase and we’ll make it right.
+          </div>
+        </details>
+
+        <details>
+          <summary>Team pricing or volume discounts?</summary>
+          <div class="a small">
+            Yes. For 10+ seats, we offer tiered discounts and centralized billing. <a href="/contact.html">Contact us</a>
+            with your team size and procurement requirements.
+          </div>
+        </details>
+
+        <details>
+          <summary>Do you support purchase orders (POs) or invoices?</summary>
+          <div class="a small">
+            We support PO/invoice-based purchasing for approved organizations. <a href="/contact.html">Reach out</a> for vendor onboarding docs.
+          </div>
+        </details>
+
+        <details>
+          <summary>What’s included in the Free plan?</summary>
+          <div class="a small">
+            Transcript Analyzer, product updates, and access to select templates. You can upgrade anytime to unlock Status Report
+            Generator, AI Prompt Pack, and (soon) Risk Radar.
+          </div>
+        </details>
+
+        <details>
+          <summary>Is my data secure?</summary>
+          <div class="a small">
+            Yes. We follow least-privilege principles, encrypted transport, and never sell your data. Enterprise security overview is
+            available on request.
+          </div>
+        </details>
+      </div>
+    </section>
   </main>
 
-  <section class="wrap grid" style="padding-bottom:60px">
-    <div class="card">
-      <h3>Free</h3>
-      <p>Transcript Analyzer + newsletter.</p>
-      <ul class="sub">
-        <li>Actions, Risks, Decisions</li>
-        <li>Email support (community)</li>
-      </ul>
-      <div class="card-actions">
-        <a class="btn primary" href="/contact.html">Get Started</a>
+  <footer class="site-footer">
+    <div class="container footer-grid">
+      <div>
+        <img class="footer-logo" src="/assets/img/logo.png" alt="System & Flow" />
+        <p class="small">Project management toolkits & AI prompts.</p>
+      </div>
+      <nav aria-label="Footer">
+        <ul class="footer-nav">
+          <li><a href="/">Home</a></li>
+          <li><a href="/apps.html">Apps</a></li>
+          <li><a href="/pricing.html">Pricing</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="https://systemnflow.gumroad.com">Store</a></li>
+        </ul>
+      </nav>
+      <div class="social">
+        <a href="https://www.instagram.com/systemnflow" aria-label="Instagram">@systemnflow</a>
+        <a href="https://www.tiktok.com/@systemnflow" aria-label="TikTok">@systemnflow</a>
+        <a href="https://www.pinterest.com/systemnflow" aria-label="Pinterest">Pinterest</a>
+        <a href="https://www.youtube.com/@Systemnflow" aria-label="YouTube">YouTube</a>
+        <a href="https://www.linkedin.com/company/system-and-flow" aria-label="LinkedIn">LinkedIn</a>
       </div>
     </div>
-
-    <div class="card">
-      <div class="card-top">
-        <h3 style="margin:0">Pro</h3>
-        <span class="badge soon"><span class="dot"></span> Coming&nbsp;Soon</span>
-      </div>
-      <p>Status Report Generator + AI Prompt Pack.</p>
-      <ul class="sub">
-        <li>Exec-ready one-pagers</li>
-        <li>Export to PDF/Markdown</li>
-        <li>50+ AI prompts for PMs</li>
-      </ul>
-      <div class="card-actions">
-        <a class="btn ghost" href="/contact.html">Get Notified</a>
-      </div>
+    <div class="container legal small">
+      © <span id="y"></span> System & Flow™. All rights reserved.
     </div>
+  </footer>
 
-    <div class="card">
-      <div class="card-top">
-        <h3 style="margin:0">Suite</h3>
-        <span class="badge soon"><span class="dot"></span> Coming&nbsp;Soon</span>
-      </div>
-      <p>Everything in Pro + Risk Radar.</p>
-      <ul class="sub">
-        <li>AI-suggested mitigations</li>
-        <li>Priority support</li>
-      </ul>
-      <div class="card-actions">
-        <a class="btn ghost" href="/contact.html">Get Notified</a>
-      </div>
-    </div>
-  </section>
+  <script>
+    // year
+    document.getElementById('y').textContent = new Date().getFullYear();
 
-  <div data-include="/partials/footer.html"></div>
-  <script src="/include.js" defer></script>
+    // mobile nav
+    const btn = document.querySelector('.nav-toggle');
+    const nav = document.getElementById('nav');
+    if (btn && nav) {
+      btn.addEventListener('click', () => {
+        const open = btn.getAttribute('aria-expanded') === 'true';
+        btn.setAttribute('aria-expanded', String(!open));
+        nav.classList.toggle('open');
+      });
+    }
+  </script>
 </body>
 </html>
