--- a/thanks.html
+++ b/thanks.html
@@ -3,35 +3,49 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+
   <title>Thanks — You’re on the list! | System & Flow</title>
   <meta name="description" content="Thanks for reaching out. We'll be in touch soon with updates, tips, and specials." />
   <link rel="canonical" href="https://systemnflow.com/thanks.html" />
   <meta name="robots" content="noindex,follow" />
   <meta name="theme-color" content="#0b1220" />
+
+  <!-- Social -->
+  <meta property="og:title" content="Thanks — You’re on the list! | System & Flow" />
+  <meta property="og:description" content="We’ll be in touch soon with updates, tips, and specials." />
+  <meta property="og:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
+  <meta property="og:url" content="https://systemnflow.com/thanks.html" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <!-- CSS -->
   <link rel="preload" href="/styles.css" as="style" />
   <link rel="stylesheet" href="/styles.css" />
 
-  <!-- Favicons & Touch Icons -->
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
-<link rel="manifest" href="/assets/img/site.webmanifest">
-<link rel="mask-icon" href="/assets/img/safari-pinned-tab.svg" color="#0b1220">
-<link rel="shortcut icon" href="/assets/img/favicon.ico">
-<meta name="msapplication-TileColor" content="#0b1220">
-<meta name="msapplication-config" content="/assets/img/browserconfig.xml">
-<meta name="theme-color" content="#0b1220">
-  
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
+  <link rel="shortcut icon" href="/assets/img/favicon.ico">
+  <link rel="manifest" href="/assets/img/site.webmanifest">
+  <link rel="mask-icon" href="/assets/img/safari-pinned-tab.svg" color="#0b1220">
+  <meta name="msapplication-TileColor" content="#0b1220">
+  <meta name="msapplication-config" content="/assets/img/browserconfig.xml">
+
   <style>
     .t-wrap{max-width:820px;margin:0 auto;padding:70px 20px 40px;text-align:center}
-    .t-badge{display:inline-flex;align-items:center;justify-content:center;width:70px;height:70px;border-radius:50%;background:#0f1f14;border:1px solid var(--border);color:#c9f1dc;font-size:30px}
+    .t-badge{display:inline-flex;align-items:center;justify-content:center;width:70px;height:70px;
+      border-radius:50%;background:#0f1f14;border:1px solid var(--border);color:#35d17a;font-size:32px}
     .t-title{font-size:clamp(26px,4vw,38px);margin:16px 0 8px}
     .t-sub{color:var(--muted);max-width:620px;margin:0 auto 18px}
     .t-actions{display:flex;gap:12px;flex-wrap:wrap;justify-content:center;margin-top:18px}
     .t-note{color:var(--muted);font-size:14px;margin-top:12px}
+    .t-redirect{margin-top:16px;font-size:.9rem;color:var(--muted)}
   </style>
 </head>
 <body class="dark">
+
+  <!-- Header -->
   <header class="wrap header">
     <div class="brand">
       <a href="/" aria-label="Go home" style="display:flex;align-items:center;gap:10px;text-decoration:none;">
@@ -46,6 +60,7 @@
     </nav>
   </header>
 
+  <!-- Main -->
   <main class="wrap t-wrap">
     <div class="t-badge">✔</div>
     <h1 class="t-title">Thanks — you’re on the list!</h1>
@@ -55,9 +70,29 @@
       <a class="btn ghost" href="/">Back to Home</a>
     </div>
     <p class="t-note">No longer interested? You can unsubscribe with one click in any email.</p>
+    <p class="t-redirect">You’ll be redirected back to the homepage in a few seconds…</p>
   </main>
 
-  <div data-include="/partials/footer.html"></div>
-  <script src="/include.js" defer></script>
+  <!-- Footer -->
+  <footer class="footer-min">
+    <div class="foot-left">
+      <img src="/assets/img/logo.png" alt="System & Flow" class="logo-icon" />
+      <span class="brand">System &amp; Flow</span>
+    </div>
+    <div class="foot-right">
+      <a href="/privacy.html">Privacy</a><span class="divider">|</span>
+      <a href="/terms.html">Terms</a><span class="divider">|</span>
+      <span>&copy; <span id="y"></span> System & Flow™</span>
+    </div>
+  </footer>
+
+  <script>
+    document.getElementById("y").textContent = new Date().getFullYear();
+
+    // Auto-redirect after 5 seconds
+    setTimeout(() => {
+      window.location.href = "/";
+    }, 5000);
+  </script>
 </body>
 </html>
