--- a/apps/risk-radar.html
+++ b/apps/risk-radar.html
@@ -3,54 +3,123 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+
   <title>Risk Radar — System & Flow</title>
-  <meta name="description" content="Auto-surface top project risks with AI-suggested mitigations." />
+  <meta name="description" content="Auto-surface top project risks with AI-suggested mitigations. Get notified when Risk Radar launches." />
   <link rel="canonical" href="https://systemnflow.com/apps/risk-radar.html" />
   <meta name="robots" content="index,follow" />
   <meta name="theme-color" content="#0b1220" />
+
+  <!-- Open Graph / Twitter -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Risk Radar — System & Flow" />
+  <meta property="og:description" content="AI-powered radar that flags risks before they explode. Join the waitlist." />
+  <meta property="og:url" content="https://systemnflow.com/apps/risk-radar.html" />
+  <meta property="og:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <!-- CSS -->
+  <link rel="preload" href="/styles.css" as="style" />
   <link rel="stylesheet" href="/styles.css" />
-  <link rel="icon" href="/favicon.ico" />
+
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
+  <link rel="manifest" href="/assets/img/site.webmanifest">
+  <link rel="shortcut icon" href="/assets/img/favicon.ico">
+
+  <!-- GA (optional; safe to keep since it exists sitewide) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWG4X18"></script>
+  <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);} gtag('js',new Date()); gtag('config','G-1FRFWG4X18');</script>
 </head>
 <body class="dark">
+  <!-- Header -->
   <header class="wrap header">
-    <div class="brand"><a href="/"><img src="/logo.png" alt="System & Flow" class="logo-icon" /><span class="brand-name">System &amp; Flow</span></a></div>
-    <nav class="nav"><a href="/">Home</a><a href="/apps.html">Apps</a><a href="/pricing.html">Pricing</a><a href="/contact.html">Contact</a></nav>
+    <div class="brand">
+      <a href="/" aria-label="Go home" style="display:flex;align-items:center;gap:10px;text-decoration:none;">
+        <img src="/assets/img/logo.png" alt="System & Flow icon" class="logo-icon" width="28" height="28" />
+        <span class="brand-name">System &amp; Flow</span>
+      </a>
+    </div>
+    <nav class="nav">
+      <a href="/">Home</a>
+      <a href="/apps.html">Apps</a>
+      <a href="/contact.html">Contact</a>
+    </nav>
   </header>
 
-  <main class="wrap hero">
-    <div class="card-top"><h1>Risk Radar</h1><span class="badge soon"><span class="dot"></span> Coming soon</span></div>
-    <p class="sub">AI-powered radar that flags risks before they explode.</p>
+  <!-- Hero -->
+  <main class="wrap hero" style="padding:60px 20px 14px">
+    <div class="card-top" style="gap:10px">
+      <h1 style="margin:0">Risk Radar</h1>
+      <span class="badge soon" aria-label="Coming soon"><span class="dot" aria-hidden="true"></span> Coming&nbsp;Soon</span>
+    </div>
+    <p class="sub">AI-powered radar that flags risks before they explode — with <strong>suggested mitigations</strong> and <strong>risk history</strong>.</p>
   </main>
 
-  <section class="wrap" style="max-width:800px;padding:0 20px 50px">
-    <div class="card">
-      <h3>Planned features</h3>
-      <ul style="color:var(--muted);line-height:1.6">
-        <li>Automatic risk extraction from notes/status</li>
-        <li>AI-suggested mitigations</li>
-        <li>Risk scoring + history view</li>
-      </ul>
-    </div>
-    <div class="card">
-      <h3>Join the waitlist</h3>
-      <form id="rr-wait" action="https://formspree.io/f/mzzvlwqy" method="POST" class="newsletter-form">
-        <input type="email" name="email" required placeholder="Email for Risk Radar updates" />
-        <input type="hidden" name="_subject" value="Risk Radar waitlist — systemnflow.com" />
-        <div class="actions"><button class="btn primary">Join</button></div>
-      </form>
-      <div id="rr-wait-ok" class="success">✅ Added to Risk Radar waitlist.</div>
+  <!-- Content -->
+  <section class="wrap" style="max-width:820px;padding:10px 20px 60px">
+    <div class="grid" style="padding:0;gap:18px">
+      <div class="card">
+        <h3>Planned features</h3>
+        <ul class="sub" style="margin:6px 0 0;line-height:1.7">
+          <li>Automatic risk extraction from notes & status updates</li>
+          <li>AI-suggested mitigations and owners</li>
+          <li>Risk scoring, trend history, and filters</li>
+        </ul>
+      </div>
+
+      <div class="card">
+        <h3>Join the waitlist</h3>
+        <form id="rr-wait" action="https://formspree.io/f/mzzvlwqy" method="POST" class="newsletter-form" style="max-width:560px">
+          <input type="email" name="email" required placeholder="Email for Risk Radar updates" aria-label="Email address" />
+          <input type="hidden" name="_subject" value="Risk Radar waitlist — systemnflow.com" />
+          <div class="actions">
+            <button class="btn primary" type="submit">Notify Me</button>
+          </div>
+        </form>
+        <div id="rr-wait-ok" class="success">✅ Added to Risk Radar waitlist.</div>
+      </div>
     </div>
   </section>
 
-  <div data-include="/partials/footer.html"></div>
-  <script src="/include.js" defer></script>
+  <!-- Footer (compact) -->
+  <footer class="footer-min">
+    <div class="foot-left">
+      <img src="/assets/img/logo.png" alt="System & Flow" class="logo-icon" />
+      <span class="brand">System &amp; Flow</span>
+    </div>
+    <div class="foot-right">
+      <a href="/privacy.html">Privacy</a><span class="divider">|</span>
+      <a href="/terms.html">Terms</a><span class="divider">|</span>
+      <span>&copy; <span id="y"></span> System & Flow™</span>
+    </div>
+  </footer>
+
   <script>
-    const rr=document.getElementById('rr-wait'), ok=document.getElementById('rr-wait-ok');
-    if(rr){rr.addEventListener('submit',async e=>{
-      e.preventDefault();
-      const r=await fetch(rr.action,{method:'POST',body:new FormData(rr),headers:{'Accept':'application/json'}});
-      if(r.ok){rr.style.display='none';ok.style.display='block';}
-      else alert('Please try again.');});
+    // footer year
+    document.getElementById('y').textContent = new Date().getFullYear();
+
+    // Waitlist AJAX
+    const rr = document.getElementById('rr-wait');
+    const ok = document.getElementById('rr-wait-ok');
+    if (rr) {
+      rr.addEventListener('submit', async (e) => {
+        e.preventDefault();
+        const resp = await fetch(rr.action, {
+          method: 'POST',
+          body: new FormData(rr),
+          headers: { 'Accept': 'application/json' }
+        });
+        if (resp.ok) {
+          rr.style.display = 'none';
+          ok.style.display = 'block';
+          if (typeof gtag === 'function') gtag('event','newsletter_signup',{source:'risk-radar'});
+        } else {
+          alert('Please try again.');
+        }
+      });
     }
   </script>
 </body>
