--- a/apps/status-report.html
+++ b/apps/status-report.html
@@ -1,57 +1,132 @@
+Here’s a polished drop-in **`apps/status-report.html`** that matches your updated style, removes the partial/include dependency, and keeps the **Coming Soon + Get Notified** form with AJAX + GA event:
+
+```html
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+
   <title>Status Report Generator — System & Flow</title>
-  <meta name="description" content="Exec-ready one-page status reports. Built by project managers, for project managers." />
+  <meta name="description" content="Exec-ready one-page status reports with instant PDF/Markdown export. Join the waitlist to get notified at launch." />
   <link rel="canonical" href="https://systemnflow.com/apps/status-report.html" />
   <meta name="robots" content="index,follow" />
   <meta name="theme-color" content="#0b1220" />
+
+  <!-- Open Graph / Twitter -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Status Report Generator — System & Flow" />
+  <meta property="og:description" content="Generate clean, exec-ready one-pagers with PDF/Markdown export. Join the waitlist." />
+  <meta property="og:url" content="https://systemnflow.com/apps/status-report.html" />
+  <meta property="og:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <!-- CSS -->
+  <link rel="preload" href="/styles.css" as="style" />
   <link rel="stylesheet" href="/styles.css" />
-  <link rel="icon" href="/favicon.ico" />
+
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
+  <link rel="manifest" href="/assets/img/site.webmanifest">
+  <link rel="shortcut icon" href="/assets/img/favicon.ico">
+
+  <!-- GA (sitewide) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWG4X18"></script>
+  <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);} gtag('js',new Date()); gtag('config','G-1FRFWG4X18');</script>
 </head>
 <body class="dark">
+  <!-- Header -->
   <header class="wrap header">
-    <div class="brand"><a href="/"><img src="/logo.png" alt="System & Flow" class="logo-icon" /><span class="brand-name">System &amp; Flow</span></a></div>
-    <nav class="nav"><a href="/">Home</a><a href="/apps.html">Apps</a><a href="/pricing.html">Pricing</a><a href="/contact.html">Contact</a></nav>
+    <div class="brand">
+      <a href="/" aria-label="Go home" style="display:flex;align-items:center;gap:10px;text-decoration:none;">
+        <img src="/assets/img/logo.png" alt="System & Flow icon" class="logo-icon" width="28" height="28" />
+        <span class="brand-name">System &amp; Flow</span>
+      </a>
+    </div>
+    <nav class="nav">
+      <a href="/">Home</a>
+      <a href="/apps.html">Apps</a>
+      <a href="/contact.html">Contact</a>
+    </nav>
   </header>
 
-  <main class="wrap hero">
-    <div class="card-top"><h1>Status Report Generator</h1><span class="badge soon"><span class="dot"></span> Coming soon</span></div>
-    <p class="sub">Generate clean, exec-ready one-pagers with PDF/Markdown export.</p>
+  <!-- Hero -->
+  <main class="wrap hero" style="padding:60px 20px 14px">
+    <div class="card-top" style="gap:10px">
+      <h1 style="margin:0">Status Report Generator</h1>
+      <span class="badge soon" aria-label="Coming soon"><span class="dot" aria-hidden="true"></span> Coming&nbsp;Soon</span>
+    </div>
+    <p class="sub">Generate clean, exec-ready one-pagers with <strong>milestones, blockers, KPIs</strong> and instant <strong>PDF/Markdown export</strong>.</p>
   </main>
 
-  <section class="wrap" style="max-width:800px;padding:0 20px 50px">
-    <div class="card">
-      <h3>What it does</h3>
-      <ul style="color:var(--muted);line-height:1.6">
-        <li>Summarize key project highlights</li>
-        <li>Auto-format milestones, blockers, KPIs</li>
-        <li>Instant PDF or Markdown export</li>
-      </ul>
-    </div>
-    <div class="card">
-      <h3>Join the waitlist</h3>
-      <form id="sr-wait" action="https://formspree.io/f/mzzvlwqy" method="POST" class="newsletter-form">
-        <input type="email" name="email" required placeholder="Email for Status Report updates" />
-        <input type="hidden" name="_subject" value="Status Report waitlist — systemnflow.com" />
-        <div class="actions"><button class="btn primary">Join</button></div>
-      </form>
-      <div id="sr-wait-ok" class="success">✅ Added to Status Report waitlist.</div>
+  <!-- Content -->
+  <section class="wrap" style="max-width:820px;padding:10px 20px 60px">
+    <div class="grid" style="padding:0;gap:18px">
+      <div class="card">
+        <h3>What it does</h3>
+        <ul class="sub" style="margin:6px 0 0;line-height:1.7">
+          <li>Summarize key highlights in your voice</li>
+          <li>Auto-format milestones, risks/blockers, and KPIs</li>
+          <li>Export to PDF or Markdown in one click</li>
+        </ul>
+      </div>
+
+      <div class="card">
+        <h3>Join the waitlist</h3>
+        <form id="sr-wait" action="https://formspree.io/f/mzzvlwqy" method="POST" class="newsletter-form" style="max-width:560px">
+          <input type="email" name="email" required placeholder="Email for Status Report updates" aria-label="Email address" />
+          <input type="hidden" name="_subject" value="Status Report waitlist — systemnflow.com" />
+          <div class="actions">
+            <button class="btn primary" type="submit">Notify Me</button>
+          </div>
+        </form>
+        <div id="sr-wait-ok" class="success">✅ Added to Status Report waitlist.</div>
+      </div>
     </div>
   </section>
 
-  <div data-include="/partials/footer.html"></div>
-  <script src="/include.js" defer></script>
+  <!-- Footer (compact) -->
+  <footer class="footer-min">
+    <div class="foot-left">
+      <img src="/assets/img/logo.png" alt="System & Flow" class="logo-icon" />
+      <span class="brand">System &amp; Flow</span>
+    </div>
+    <div class="foot-right">
+      <a href="/privacy.html">Privacy</a><span class="divider">|</span>
+      <a href="/terms.html">Terms</a><span class="divider">|</span>
+      <span>&copy; <span id="y"></span> System & Flow™</span>
+    </div>
+  </footer>
+
   <script>
-    const sr=document.getElementById('sr-wait'), ok=document.getElementById('sr-wait-ok');
-    if(sr){sr.addEventListener('submit',async e=>{
-      e.preventDefault();
-      const r=await fetch(sr.action,{method:'POST',body:new FormData(sr),headers:{'Accept':'application/json'}});
-      if(r.ok){sr.style.display='none';ok.style.display='block';}
-      else alert('Please try again.');});
+    // footer year
+    document.getElementById('y').textContent = new Date().getFullYear();
+
+    // Waitlist AJAX
+    const sr = document.getElementById('sr-wait');
+    const ok = document.getElementById('sr-wait-ok');
+    if (sr) {
+      sr.addEventListener('submit', async (e) => {
+        e.preventDefault();
+        const resp = await fetch(sr.action, {
+          method: 'POST',
+          body: new FormData(sr),
+          headers: { 'Accept': 'application/json' }
+        });
+        if (resp.ok) {
+          sr.style.display = 'none';
+          ok.style.display = 'block';
+          if (typeof gtag === 'function') gtag('event','newsletter_signup',{source:'status-report'});
+        } else {
+          alert('Please try again.');
+        }
+      });
     }
   </script>
 </body>
 </html>
+```
+
+Want me to do the same treatment for **`apps/ai-prompt-pack.html`** (but as the **freebie** with stronger headline + “Send me the pack” CTA) next?
