--- a/about.html
+++ b/about.html
@@ -29,8 +29,8 @@
   <link rel="shortcut icon" href="/assets/img/favicon.ico">
 
   <!-- CSS -->
-  <link rel="preload" href="/assets/css/main.css" as="style" />
-  <link rel="stylesheet" href="/assets/css/main.css" />
+  <link rel="preload" href="/styles.css" as="style" />
+  <link rel="stylesheet" href="/styles.css" />
 
   <!-- GA -->
   <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
