--- a/apps.html
+++ b/apps.html
@@ -31,8 +31,8 @@
   <link rel="shortcut icon" href="/assets/img/favicon.ico">
 
   <!-- CSS -->
-  <link rel="preload" href="/assets/css/main.css" as="style" />
-  <link rel="stylesheet" href="/assets/css/main.css" />
+  <link rel="preload" href="/styles.css" as="style" />
+  <link rel="stylesheet" href="/styles.css" />
 
   <!-- JSON-LD -->
   <script type="application/ld+json">
