--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
   </script>
 
   <!-- CSS -->
-  <link rel="preload" href="/assets/css/main.css" as="style" />
-  <link rel="stylesheet" href="/assets/css/main.css" />
+  <link rel="preload" href="/styles.css" as="style" />
+  <link rel="stylesheet" href="/styles.css" />
 
   <!-- Favicons & PWA -->
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
